# bachelor_diploma_2016

./: ЧупахинАА_421.doc  ЧупахинАА_421_readme.txt
articles/: Ал_наз_рес_в_ЦОД_основ_схеме_мурав_кол_Плакунов.doc
comparison/: results_fat_tree.xls  results_fat_tree_scatter.xls  results_random.xls  results_random_scatter.xls
comparison/fat_tree_ring/: _1_fat_tree_ring_(2_8)_(4_16)_(5_10)_(32)_(64)_(100_200)_size_20_20.dcxml  (+5 more)
huawei_results/: results_huawei_comparison.xls  results_huawei_comparison_scatter.xls
huawei_tests_xml_with_rules/: A1.xml  A11.xml  A12.xml  A13.xml  A16.xml  A17.xml  A18.xml  A2.xml  A6.xml  A7.xml  A8.xml
migration/algo/: CMakeLists.txt  main.cpp  trans.cpp
migration/algo/include/: element.h  link.h  network.h  node.h  operation.h  path.h  request.h  store.h
migration/algo/inputData/: test11.dcxml  test4.dcxml  test8.dcxml
migration/algo/interface/: elementfactory.cpp  elementfactory.h  export.cpp  factory.cpp  resourcesxmlfactory.h  snapshot.cpp  snapshot.h  tenantxmlfactory.cpp  tenantxmlfactory.h
migration/algo/prototype/: CMakeLists.txt  dijkstra.h  exhaustivesearcher.cpp  exhaustivesearcher.h  migration.h  preprocessor.cpp  prototype.cpp  prototype.h
migration/algo/routing/: CMakeLists.txt  bfsqueue.cpp  bfsqueue.h  bfsrouter.cpp  bfsrouter.h  bsearcher.cpp  dijkstrarouter.h  dijkstratouter.cpp  router.h
migration/algo/trans/: CMakeLists.txt  mixer.cpp
old_algo/: ЦОД_единый_планировщик_v.1.0_final.doc
old_algo/algo/interface/: CMakeLists.txt  export.h  factory.cpp  resourcesxmlfactory.h  snapshot.cpp  snapshot.h
(+103 files in other folders)
