CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

CMAKE_POLICY(SET CMP0028 OLD)

PROJECT(algo)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
      include/
      )
find_package( Qt5Core REQUIRED )

SET ( COMPONENTS
      prototype
      interface
      routing
      trans
      common
      )

FOREACH(COMPONENT ${COMPONENTS})
   ADD_SUBDIRECTORY(${COMPONENT})
ENDFOREACH(COMPONENT)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
qt5_use_modules(${PROJECT_NAME} Core)
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${COMPONENTS})

ADD_EXECUTABLE(tr trans.cpp)
qt5_use_modules(tr Core)
TARGET_LINK_LIBRARIES(tr trans interface)
