CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(interface)

find_package( Qt5Xml REQUIRED )

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB QT_HEADERS *.h)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${QT_HEADERS_MOC})
qt5_use_modules(${PROJECT_NAME} Xml)
